<resources>
    <string name="app_name">MimicLogin</string>
    <string name="StringLogIn">登录</string>
    <string name="StringPleaseEnterPassWord">请输入密码</string>
    <string name="StringPleaseEnterUserName">邮箱/手机号</string>
    <string name="StringNoPassWordLogin">无密码登录</string>
    <string name="StringLoginWithQQ">QQ登录</string>
    <string name="StringSignUp">注册账号</string>
    <string name="StringForgetPassword">忘记密码</string>
</resources>
