<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f8f8f8"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="user avatar"
        app:srcCompat="@mipmap/bunny_round"
        tools:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="38dp"
            app:srcCompat="@mipmap/user_name_foreground" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:autofillHints="@string/StringPleaseEnterUserName"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/StringPleaseEnterUserName"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_weight="0"
            app:srcCompat="@mipmap/password_foreground" />

        <EditText
            android:id="@+id/passWordEditText"
            android:layout_width="286dp"
            android:layout_height="38dp"
            android:background="#ffffff
    "
            android:ems="10"
            android:hint="@string/StringPleaseEnterPassWord"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/ForgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_weight="0"
            android:gravity="right"
            android:text="@string/StringForgetPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#8398b0"
            tools:gravity="right" />
    </LinearLayout>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fd8625"
        android:layout_marginTop="17dp"
        android:text="@string/StringLogIn" />

    <TextView
        android:id="@+id/noPassWordLoginTextView"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:text="@string/StringNoPassWordLogin"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#8398b0" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        tools:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/SignUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/StringSignUp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#8398b0" />

        <TextView
            android:id="@+id/divideTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="bottom"
            android:text="  |  "
            android:textColor="#8398b0" />

        <TextView
            android:id="@+id/LoginWithQQTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="bottom"
            android:text="@string/StringLoginWithQQ"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#8398b0" />
    </LinearLayout>
</LinearLayout>